# libphenom

./: .arcconfig  .gitignore  .travis.yml  Doxyfile  Makefile.am  README.markdown  autogen.sh  configure.ac  declmap.js  index.html  libphenom.pc.in  mkdoc.php  phenom.js  style.css
arcanist/: .phutil_module_cache  __phutil_library_init__.php  __phutil_library_map__.php
arcanist/lib/: PhenomCLinter.php  PhenomLicenseLinter.php  PhenomLintEngine.php  PhenomUnitEngine.php
arcanist/lib/cov/: PhenomCallgrindFile.php  PhenomDwarfLineInfo.php
corelib/: buf.c  config.c  counter.c  counter.h  debug_console.c  dtoa.c  error.c  hook.c  init.c  job.c  job.h  log.c  log.h  memory.c  nbio.c  pingfd.c  pipe2.c  pprintf.c  sched.c  sockaddr.c  string.c  thread.c  timerwheel.c  vprintf.c
corelib/dns/: addrinfo.c  query.c
corelib/gimli/: boot.c  ck_hs.c  counter.c  gimli.h  log.c  sockaddr.c  thread.c
corelib/hash/: murmur.c  table.c
corelib/nbio/: common.c  epoll.c  kqueue.c  portfs.c
corelib/net/: listener.c  sockaddr.c  socket.c
corelib/openssl/: bio_bufq.c  bio_stream.c  init.c  ssl_stream.c
corelib/streams/: copy.c  fd.c  make.c  read.c  string.c  temp.c  write.c
corelib/variant/: json-dump.c  json-load.c  pack.c  path.c  variant.c
docs/: activate.js  index.html  phenom.html  phenom.js  style.css
examples/: echo.c  sclient.c
include/phenom/: buffer.h  configuration.h  counter.h  defs.h  dns.h  feature_test.h.in  hashtable.h  hook.h  job.h  json.h  listener.h  log.h  memory.h  murmurhash.h  openssl.h  printf.h  queue.h  refcnt.h  socket.h  stream.h  string.h  sysutil.h  thread.h  timerwheel.h  variant.h  work.h
tests/: buf.c  counter.c  dns.c  hashtable.c  iobasic.c  memory.c  printf.c  sockaddr.c  stream.c  string.c  timer.c  tpool.c  variant.c
tests/bench/: iopipes.c  phenom.R  run-pipes.php
travis/: deps.sh  run.sh
